2001-01-13  Jeff Freedman  <jeff@amy.nerble.net>

	* Found 1 memory corruption (my fault:-( ).
	* Fixed crash at start of monks' encounter.
	
2001-01-12  Tristan Tarrant <nadir@users.sourceforge.net>
	* NEWS: updated
	* gamma.h: added newline at the end to keep gcc happy

2001-01-11  Jeff Freedman  <jeff@amy.nerble.net>

	* Implemented 'shy' and 'hound' schedules.
	* Fixed 'hang' bug upon entering Monitor.

2001-01-12  Ryan Nunn <triforce@merlin.net.au>
	* Actors.* : When in SI Intercept dont_render item flag and change to
	  dont_move SI flag.
	* Actorsio.cc : In actor constructor only call ready_best_weapon for
	  Avatar and Iolo when creating the game in Black Gate. Never gets called
	  at any other time. 
	* gamewin.cc : If dont_move SI flag is set, stop the Avatar and don't let
	  them move.
	* audio/midi_drivers/win_midiout.cc : Fixed bug with SFX playing. Fixed
	  potential memory leaks. Fixed bug causing the game to become
	  unresponsive when changing music and stopping music. Fixed bug causing
	  the entire system to freeze IF a file was played that either contained
	  no events or had every event at time 0.
	* gumps/Paperdoll_gump.cc : Fixed crash when polymorphed.
	* shapes/fontvga.cc : Changed hleads for fonts. NOTE: Other custom fonts
	  may still need changing

2001-01-11  Max Horn  <max@quendi.de>
	* contains.cc: added #include "files/utils.h"

2001-01-11  Max Horn  <max@quendi.de>
	* hash_utils.h: contains hash_set/hash_map stuff
	* files/utils.h: moved hash related stuff to hash_utils.h
	* bodies.cc: #include hash_utils.h instead of files/utils.h
	* delobjs.h: 
	* font.h: #include hash_utils.h instead of files/utils.h; removed the std:: from std::hash_map
	  since hash_map is *not* part of the standard C++ lib and should not be part of std::
	* game.h: #include hash_utils.h instead of files/utils.h; removed unneeded
	  "extern const int c_tiles_per_chunk;"